--- a/VSWork/xnh_new_2/ApiMonitor/pages/zymxsc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/zymxsc.html
@@ -563,9 +563,9 @@
             </div>
         </div>
 
-        <div>
+        <!--<div>
             <button type="button" class="btn btn-default" id="batchUpload">批量传明细</button>
-        </div>
+        </div>-->
 
         <p></p>
         
