--- a/VSWork/xnh_new_2/ApiMonitor/pages/rydj.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/rydj.html
@@ -204,7 +204,7 @@
                 <div class="btn-group">
                     <select id="areaNo" name="">
                         <option value="">请选择</option>
-                        <option value="620000">甘肃省(620000)</option>
+                        <!--<option value="620000">甘肃省(620000)</option>
                         <option value="620100">兰州市(620100)</option>
                         <option value="620103">七里河区(620103)</option>
                         <option value="620104">西固区(620104)</option>
@@ -243,7 +243,7 @@
                         <option value="620723">临泽县(620723)</option>
                         <option value="620724">高台县(620724)</option>
                         <option value="620725">山丹县(620725)</option>
-                        <option value="620800">平凉市(620800)</option>
+                        <option value="620800">平凉市(620800)</option>-->
                         <option value="620802">崆峒区(620802)</option>
                         <option value="620821">泾川县(620821)</option>
                         <option value="620822">灵台县(620822)</option>
@@ -251,7 +251,7 @@
                         <option value="620824">华亭县(620824)</option>
                         <option value="620825">庄浪县(620825)</option>
                         <option value="620826">静宁县(620826)</option>
-                        <option value="620900">酒泉市(620900)</option>
+                        <!--<option value="620900">酒泉市(620900)</option>
                         <option value="620902">肃州区(620902)</option>
                         <option value="620921">金塔县(620921)</option>
                         <option value="620922">安西县(620922)</option>
@@ -304,7 +304,7 @@
                         <option value="623025">玛曲县(623025)</option>
                         <option value="623026">碌曲县(623026)</option>
                         <option value="623027">夏河县(623027)</option>
-                        <option value="620201">嘉峪关市(620201)</option>
+                        <option value="620201">嘉峪关市(620201)</option>-->
 
                     </select>
                 </div>
