--- a/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
@@ -268,45 +268,7 @@
                 <td>
                     <select id="areaNo" name="">
                         <option value="">请选择</option>
-                        <!--<option value="620000">甘肃省(620000)</option>
-                        <option value="620100">兰州市(620100)</option>
-                        <option value="620103">七里河区(620103)</option>
-                        <option value="620104">西固区(620104)</option>
-                        <option value="620105">安宁区(620105)</option>
-                        <option value="620111">红古区(620111)</option>
-                        <option value="620121">永登县(620121)</option>
-                        <option value="620122">皋兰县(620122)</option>
-                        <option value="620123">榆中县(620123)</option>
-                        <option value="620200">嘉峪关市(620200)</option>
-                        <option value="620300">金昌市(620300)</option>
-                        <option value="620302">金川区(620302)</option>
-                        <option value="620321">永昌县(620321)</option>
-                        <option value="620400">白银市(620400)</option>
-                        <option value="620402">白银区(620402)</option>
-                        <option value="620403">平川区(620403)</option>
-                        <option value="620421">靖远县(620421)</option>
-                        <option value="620422">会宁县(620422)</option>
-                        <option value="620423">景泰县(620423)</option>
-                        <option value="620500">天水市(620500)</option>
-                        <option value="620502">秦州区(620502)</option>
-                        <option value="620503">麦积区(620503)</option>
-                        <option value="620521">清水县(620521)</option>
-                        <option value="620522">秦安县(620522)</option>
-                        <option value="620523">甘谷县(620523)</option>
-                        <option value="620524">武山县(620524)</option>
-                        <option value="620525">张家川回族自治县(620525)</option>
-                        <option value="620600">武威市(620600)</option>
-                        <option value="620602">凉州区(620602)</option>
-                        <option value="620621">民勤县(620621)</option>
-                        <option value="620622">古浪县(620622)</option>
-                        <option value="620623">天祝县(620623)</option>
-                        <option value="620700">张掖市(620700)</option>
-                        <option value="620702">甘州区(620702)</option>
-                        <option value="620721">肃南县(620721)</option>
-                        <option value="620722">民乐县(620722)</option>
-                        <option value="620723">临泽县(620723)</option>
-                        <option value="620724">高台县(620724)</option>
-                        <option value="620725">山丹县(620725)</option>-->
+                        
                         <option value="620800">平凉市(620800)</option>
                         <option value="620802">崆峒区(620802)</option>
                         <option value="620821">泾川县(620821)</option>
@@ -315,60 +277,7 @@
                         <option value="620824">华亭县(620824)</option>
                         <option value="620825">庄浪县(620825)</option>
                         <option value="620826">静宁县(620826)</option>
-                        <!--<option value="620900">酒泉市(620900)</option>
-                        <option value="620902">肃州区(620902)</option>
-                        <option value="620921">金塔县(620921)</option>
-                        <option value="620922">安西县(620922)</option>
-                        <option value="620923">肃北蒙古族自治县(620923)</option>
-                        <option value="620924">阿克塞哈萨克族自治县(620924)</option>
-                        <option value="620981">玉门市(620981)</option>
-                        <option value="620982">敦煌市(620982)</option>
-                        <option value="621000">庆阳市(621000)</option>
-                        <option value="621002">西峰区(621002)</option>
-                        <option value="621021">庆城县(621021)</option>
-                        <option value="621022">环县(621022)</option>
-                        <option value="621023">华池县(621023)</option>
-                        <option value="621024">合水县(621024)</option>
-                        <option value="621025">正宁县(621025)</option>
-                        <option value="621026">宁县(621026)</option>
-                        <option value="621027">镇原县(621027)</option>
-                        <option value="621100">定西市(621100)</option>
-                        <option value="621102">安定区(621102)</option>
-                        <option value="621121">通渭县(621121)</option>
-                        <option value="621122">陇西县(621122)</option>
-                        <option value="621123">渭源县(621123)</option>
-                        <option value="621124">临洮县(621124)</option>
-                        <option value="621125">漳县(621125)</option>
-                        <option value="621126">岷县(621126)</option>
-                        <option value="621200">陇南市(621200)</option>
-                        <option value="621202">武都区(621202)</option>
-                        <option value="621223">宕昌县(621223)</option>
-                        <option value="621221">成县(621221)</option>
-                        <option value="621224">康县(621224)</option>
-                        <option value="621222">文县(621222)</option>
-                        <option value="621225">西和县(621225)</option>
-                        <option value="621226">礼县(621226)</option>
-                        <option value="621228">两当县(621228)</option>
-                        <option value="621227">徽县(621227)</option>
-                        <option value="622900">临夏回族自治州(622900)</option>
-                        <option value="622901">临夏市(622901)</option>
-                        <option value="622921">临夏县(622921)</option>
-                        <option value="622922">康乐县(622922)</option>
-                        <option value="622923">永靖县(622923)</option>
-                        <option value="622924">广河县(622924)</option>
-                        <option value="622925">和政县(622925)</option>
-                        <option value="622926">东乡县(622926)</option>
-                        <option value="622927">积石山保安族东乡族撒拉族自治县(622927)</option>
-                        <option value="623000">甘南藏族自治州(623000)</option>
-                        <option value="623001">合作市(623001)</option>
-                        <option value="623021">临潭县(623021)</option>
-                        <option value="623022">卓尼县(623022)</option>
-                        <option value="623023">舟曲县(623023)</option>
-                        <option value="623024">迭部县(623024)</option>
-                        <option value="623025">玛曲县(623025)</option>
-                        <option value="623026">碌曲县(623026)</option>
-                        <option value="623027">夏河县(623027)</option>
-                        <option value="620201">嘉峪关市(620201)</option>-->
+                        
 
                     </select>
                 </td>
@@ -1074,7 +983,7 @@
                             for (var item in json.data) {
                                 var row = json.data[item];
 
-                                var trId = $.trim(row['REC_NO']);
+                                var trId = $.trim(row['REC_NO']) + $.trim(row['REG_NO']) + $.trim(row['ITEM_CODE']); //流水号+处方号+药品编码
 
                                 var trStr = '<tr class="example" id="' + trId + '" >';//动态拼接table
                                 // var html = '';
