--- a/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
@@ -252,6 +252,7 @@
                                     <!--th>处方医生</th>-->
                                     <th>农合结算</th>
                                     <th>数量</th>
+                                    <th>药品编码</th>
                                     <th>操作</th>
                                 </tr>
                             </thead>
